--- a/views/login.html
+++ b/views/login.html
@@ -55,19 +55,14 @@
                     }
                 });
             });
-        });
+        });//InputEmail  InputPassword
     </script>
 </head>
 
 <body>
-    <div class="container-fluid my-2">
-        <div class="row">
-            <div class="col-md-6">
-            </div>
-            <div class="col-md-6">
-                <div class="">
-
-                </div>
+    <div class="container my-5">
+        <div class="card bg-light">
+            <article class="card-body mx-auto" style="max-width: 400px;">
                 <h3 class="text-center">
                     Welcome new customer!
                 </h3>
@@ -95,11 +90,8 @@
                         <button type="submit" class="btn btn-primary btn-block my-3"> Login </button>
                         <a href="./register_user">Don't have account yet?</a>
                     </div>
-
-
                 </form>
-
-            </div>
+            </article>
         </div>
     </div>
 
